--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -38,15 +38,18 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
-        android:layout_marginStart="5dp"
+        android:paddingStart="10dp"
         android:layout_weight="1"
         android:maxLines="1"
+        android:layout_centerInParent="true"
         android:ellipsize="end"
-        android:gravity="top|start"
+        android:gravity="center_vertical"
         android:inputType="text"
-        android:hint="Поиск..."
+        android:hint="Адрес места назначения"
+        android:drawableLeft="@drawable/ic_search"
+        android:drawablePadding="5dp"
         android:imeOptions="actionSearch"
-        android:background="@color/white"
+        android:background="@drawable/search"
         app:layout_constraintStart_toEndOf="@id/menu_button"
         app:layout_constraintEnd_toStartOf="@id/card_view"
         app:layout_constraintTop_toTopOf="@id/card_view"
@@ -56,7 +59,7 @@
         android:id="@+id/menu_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="2dp"
         android:src="@drawable/ic_menu"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:layout_centerVertical="true"
