Left menu UI fixed + Map bottom fragment created

--- a/app/src/main/res/layout/activity_successful_login.xml
+++ b/app/src/main/res/layout/activity_successful_login.xml
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:src="@drawable/a_parking2"
+        android:src="@drawable/aparking_letter"
         app:layout_constraintStart_toStartOf="@id/parking_title"
         app:layout_constraintTop_toTopOf="@id/parking_title" />
 
@@ -41,7 +41,7 @@
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/g12"
+        android:src="@drawable/aparking_car"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="100dp"
