--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -60,8 +60,8 @@
         android:id="@+id/parking_letter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:src="@drawable/a_parking2"
+        android:layout_marginStart="33dp"
+        android:src="@drawable/aparking_letter"
         app:layout_constraintStart_toStartOf="@id/parking_title"
         app:layout_constraintTop_toTopOf="@id/parking_title" />
 
@@ -69,7 +69,7 @@
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/g12"
+        android:src="@drawable/aparking_car"
         tools:layout_editor_absoluteX="9dp"
         tools:layout_editor_absoluteY="435dp"
         app:layout_constraintStart_toStartOf="parent"
