--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Войти/зарегистрироваться"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:background="@color/yellow"
         android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@id/phoneNumber"
@@ -64,8 +64,8 @@
         android:id="@+id/parking_letter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:src="@drawable/a_parking2"
+        android:layout_marginStart="33dp"
+        android:src="@drawable/aparking_letter"
         app:layout_constraintStart_toStartOf="@id/parking_title"
         app:layout_constraintTop_toTopOf="@id/parking_title" />
 
@@ -73,7 +73,8 @@
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/g12"
+        android:src="@drawable/aparking_car"
+        android:textColor="@color/black"
         tools:layout_editor_absoluteX="9dp"
         tools:layout_editor_absoluteY="435dp"
         app:layout_constraintStart_toStartOf="parent"
