--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="yellow">#FCD00F</color>
-    <color name="light_yellow">#FFF00F</color>
+    <color name="yellow">#FAD13B</color>
+    <color name="light_yellow">#FEF6D8</color>
     <color name="orange">#FF8C00</color>
+    <color name="gray">#DEDFE8</color>
+    <color name="transparent">#00000000</color>
 </resources>
