--- a/app/src/main/res/layout/fragment_session_current.xml
+++ b/app/src/main/res/layout/fragment_session_current.xml
@@ -8,6 +8,7 @@
     android:paddingTop="40dp">
 
     <TextView
+        android:id="@+id/current_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/current_session_date"
@@ -96,7 +97,7 @@
         android:paddingVertical="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="20dp"
-        android:background="@drawable/bottom_border"
+        android:background="@drawable/bottom_border_yellow"
         app:layout_constraintTop_toBottomOf="@+id/parking_place">
 
         <TextView
@@ -146,7 +147,7 @@
             android:id="@+id/carNumberLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/search"
+            android:background="@drawable/holder_rounded_white"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:paddingTop="7dp"
