--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="yellow">#FAD13B</color>
-    <color name="light_yellow">#FEF6D8</color>
+    <color name="beige">#FEF6D8</color>
+    <color name="light_yellow">#FFFF00</color>
     <color name="orange">#FF8C00</color>
     <color name="gray">#DEDFE8</color>
     <color name="red">#D96E4C</color>
