--- a/app/src/main/res/drawable/bottom_border_yellow.xml
+++ b/app/src/main/res/drawable/bottom_border_yellow.xml
@@ -12,8 +12,8 @@
     <item android:bottom="1dp">
         <shape
             android:shape="rectangle">
-            <stroke android:width="1dp" android:color="@color/light_yellow" />
-            <solid android:color="@color/light_yellow" />
+            <stroke android:width="1dp" android:color="@color/beige" />
+            <solid android:color="@color/beige" />
         </shape>
     </item>
 
