--- a/app/src/main/res/drawable/holder_rounded_top_yellow.xml
+++ b/app/src/main/res/drawable/holder_rounded_top_yellow.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="@color/light_yellow" />
+        android:color="@color/beige" />
     <corners android:topLeftRadius="20dp" android:topRightRadius="20dp"/>
 </shape>
