--- a/app/src/main/res/drawable/ic_unpaid.xml
+++ b/app/src/main/res/drawable/ic_unpaid.xml
@@ -5,18 +5,18 @@
     android:viewportHeight="357">
   <path
       android:pathData="M86.5,34.1c-6.5,3.8 -9.5,9.6 -8,15.6 0.4,1.6 5.2,7.3 11.1,13.3l10.4,10.6 -10,1.1c-12.2,1.4 -19,4.3 -26.5,11.4 -6.8,6.4 -11.1,14.8 -12.5,24.5 -0.7,4.7 -1,27.1 -0.8,65 0.3,57.8 0.3,57.9 2.6,63.6 4.9,12.1 13,20.5 24.2,25.1l5.5,2.2 105.5,0.3 105.5,0.2 20.5,20.5 20.6,20.5 5.3,-0c4.9,-0 5.7,-0.3 9.2,-3.9 3.6,-3.5 3.9,-4.3 3.9,-9.2l0,-5.4 -127.9,-127.8c-126.7,-126.9 -127.8,-127.9 -132.2,-128.3 -2.4,-0.3 -5.3,0.1 -6.4,0.7zM148.7,122.2c11.7,11.7 21.3,21.6 21.3,22 0,0.4 -1.3,2.8 -2.9,5.3 -15.2,23.9 -0.3,56.4 28.3,61.6 9.5,1.7 22,-1.2 29.3,-6.7l3.5,-2.7 18.4,18.4c10.1,10.1 18.4,18.7 18.4,19.1 0,0.5 -40,0.8 -88.9,0.8l-88.8,-0 -3.4,-2.3c-7.2,-4.8 -7,-2.3 -6.7,-68.2l0.3,-59 2.2,-3.1c4.1,-5.8 6.7,-6.4 28.3,-6.4l19.5,-0 21.2,21.2zM199.9,173.4c8.7,8.8 9.2,9.5 7.3,10.5 -5.1,2.7 -14.3,-0.2 -17.4,-5.7 -2.4,-4 -2.3,-14.2 0.1,-14.2 0.3,-0 4.9,4.2 10,9.4z"
-      android:fillColor="#000000"
+      android:fillColor="@color/white"
       android:strokeColor="#00000000"/>
   <path
       android:pathData="M114.5,158.4c-5,2.2 -8.5,7.1 -8.5,11.9 0,10.2 10.2,16.8 19,12.2 9.9,-5.1 9.3,-19.8 -1,-23.9 -4.8,-1.9 -5.6,-1.9 -9.5,-0.2z"
-      android:fillColor="#000000"
+      android:fillColor="@color/white"
       android:strokeColor="#00000000"/>
   <path
       android:pathData="M208,75c-2,0.5 -4.9,2.4 -6.7,4.4 -4,4.3 -4.5,10.2 -1.3,15.3 3.9,6.5 2.4,6.3 61.2,6.3 50.6,-0 53.5,0.1 57.6,2 3.3,1.5 4.7,2.9 6.2,6.2 1.9,4.1 2,7 2,57.8 0,51.3 0.1,53.6 2,56.7 3.8,6.3 12,8.1 18.1,4 1.8,-1.2 3.9,-3.4 4.6,-4.7 1,-2 1.2,-15.3 1.1,-60.5l-0.3,-58 -3.4,-6.7c-6.3,-12.6 -17.6,-20.7 -31.6,-22.8 -8.3,-1.2 -104.4,-1.2 -109.5,-0z"
-      android:fillColor="#000000"
+      android:fillColor="@color/white"
       android:strokeColor="#00000000"/>
   <path
       android:pathData="M279.2,159c-5.7,2.6 -8.8,9 -7.3,14.8 1.6,5.6 7.2,10.2 12.6,10.2 14.8,-0 18.5,-19.8 4.8,-25.6 -4.2,-1.8 -4.9,-1.7 -10.1,0.6z"
-      android:fillColor="#000000"
+      android:fillColor="@color/white"
       android:strokeColor="#00000000"/>
 </vector>
