--- a/app/src/main/res/layout/fragment_session_unpaid.xml
+++ b/app/src/main/res/layout/fragment_session_unpaid.xml
@@ -7,24 +7,15 @@
     android:background="@drawable/holder_rounded_top_yellow"
     android:paddingTop="40dp">
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/history"
+        android:text="@string/number_unpaid_header"
         android:textColor="@color/black"
         android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/ic_outline_more_24"
-        android:layout_marginEnd="20dp"
-        android:background="@color/beige"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -33,5 +24,5 @@
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/header" />
 </androidx.constraintlayout.widget.ConstraintLayout>
