--- a/app/src/main/res/layout/holder_parking_place.xml
+++ b/app/src/main/res/layout/holder_parking_place.xml
@@ -60,6 +60,7 @@
 
                 app:layout_constraintTop_toBottomOf="@id/complex_stick2">
                 <TextView
+                    android:id="@+id/spot_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="A21"
