--- a/app/src/main/res/layout/fragment_cluster.xml
+++ b/app/src/main/res/layout/fragment_cluster.xml
@@ -43,6 +43,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginBottom="10dp"/>
         <ProgressBar
+            android:id="@+id/load_progress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
@@ -73,6 +74,7 @@
                     android:text="@string/occupied"
                     android:textSize="14sp" />
                 <TextView
+                    android:id="@+id/occupied"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
@@ -98,6 +100,7 @@
                     android:text="@string/free_progress"
                     android:textSize="14sp" />
                 <TextView
+                    android:id="@+id/free"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
