--- a/app/src/main/res/layout/holder_session_parking.xml
+++ b/app/src/main/res/layout/holder_session_parking.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:background="@drawable/holder_rounded_gray"
     android:paddingTop="20dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:animateLayoutChanges="true">
     <TextView
         android:id="@+id/session_date"
         android:layout_width="wrap_content"
@@ -43,135 +44,142 @@
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/extra_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bottom_border_yellow_reverse"
-        android:paddingVertical="20dp"
         android:orientation="vertical">
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/parking_time"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:layout_marginStart="20dp"
-            android:layout_marginBottom="10dp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingHorizontal="20dp">
+            android:background="@drawable/bottom_border_yellow_reverse"
+            android:paddingVertical="20dp"
+            android:orientation="vertical">
             <TextView
-                android:id="@+id/timePassed"
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="02:03:24"
+                android:text="@string/parking_time"
                 android:textColor="@color/black"
-                android:textStyle="bold"
-                android:textSize="20sp"/>
-            <TextView
-                android:id="@+id/timePeriod"
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:textSize="20sp"
+                android:layout_marginStart="20dp"
+                android:layout_marginBottom="10dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="8:32 - 10:35"
-                android:textColor="@color/black"
-                android:textSize="20sp"/>
+                android:orientation="horizontal"
+                android:paddingHorizontal="20dp">
+                <TextView
+                    android:id="@+id/timePassed"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="02:03:24"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:textSize="20sp"/>
+                <TextView
+                    android:id="@+id/timePeriod"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="8:32 - 10:35"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"/>
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bottom_border_yellow_reverse"
-        android:paddingVertical="20dp"
-        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bottom_border_yellow_reverse"
+            android:paddingVertical="20dp"
+            android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingHorizontal="20dp">
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/parking_address"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:layout_marginBottom="10dp"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:paddingHorizontal="20dp">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="@string/parking_address"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:layout_marginBottom="10dp"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="@string/parking_place"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:layout_marginBottom="10dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/parking_place"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:layout_marginBottom="10dp"/>
+                android:orientation="horizontal"
+                android:paddingHorizontal="20dp">
+                <TextView
+                    android:id="@+id/address"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="ул. Такая-то, д. Х/хх"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"/>
+                <TextView
+                    android:id="@+id/place_code"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="А22"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:textSize="20sp"/>
+            </LinearLayout>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingHorizontal="20dp">
+            android:paddingTop="20dp"
+            android:orientation="vertical">
             <TextView
-                android:id="@+id/address"
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ул. Такая-то, д. Х/хх"
+                android:text="@string/my_car"
                 android:textColor="@color/black"
-                android:textSize="16sp"/>
-            <TextView
-                android:id="@+id/place_code"
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:textSize="20sp"
+                android:layout_marginStart="20dp"
+                android:layout_marginBottom="10dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="А22"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:textSize="20sp"/>
-        </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="20dp"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/my_car"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:layout_marginStart="20dp"
-            android:layout_marginBottom="10dp"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingHorizontal="20dp">
-            <TextView
-                android:id="@+id/car_brand"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="Nissan Какой-то 2"
-                android:textColor="@color/black"
-                android:textSize="16sp"/>
-            <TextView
-                android:id="@+id/car_code"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="777 KNS | 02"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:textSize="20sp"/>
+                android:orientation="horizontal"
+                android:paddingHorizontal="20dp">
+                <TextView
+                    android:id="@+id/car_brand"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="Nissan Какой-то 2"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"/>
+                <TextView
+                    android:id="@+id/car_code"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="777 KNS | 02"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:textSize="20sp"/>
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
     <ImageView
+        android:id="@+id/arrow"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/ic_arrow_up_24"
