--- a/app/src/main/res/layout/fragment_point.xml
+++ b/app/src/main/res/layout/fragment_point.xml
@@ -131,6 +131,7 @@
                 android:layout_marginEnd="10dp"/>
 
             <TextView
+                android:id="@+id/button_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Начинаю парковаться"
