--- a/app/src/main/res/layout/holder_car.xml
+++ b/app/src/main/res/layout/holder_car.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:animateLayoutChanges="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,19 +24,22 @@
 
         <TextView
             android:id="@+id/car_name_collapsed"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Nissan Какой-то"
+            tools:text="Nissan Какой-то"
             android:textColor="@color/black"
             android:textSize="18sp"
+            android:maxLines="2"
+            android:ellipsize="end"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/selectSpot"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/car_number_collapsed"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="777 KNS 02"
             android:textColor="@color/black"
@@ -45,6 +49,7 @@
             android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/selectSpot"
             app:layout_constraintTop_toBottomOf="@+id/car_name_collapsed" />
 
         <ImageButton
@@ -56,6 +61,7 @@
             android:layout_margin="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:srcCompat="@drawable/ic_unchoosed_item" />
 
         <TextView
